[package]
name = "tlsinspect"
version = "0.1.0"
edition = "2024"
authors = ["Praveen Pramod Kulkarni <praveenkulkarni1996@gmail.com>"]
description = "A CLI for inspecting TLS certificate chains and IP overrides."
license = "MIT"
repository = "https://github.com/praveenkulkarni1996/tlsinspect"
readme = "README.md"
keywords = ["tls", "ssl", "certificate", "network", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rustls = "0.22"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.25"
webpki-roots = "0.26"
x509-parser = "0.16"
